# Smart-Email-Processor

./: README.md  app.py  config.py  pyproject.toml  requirements.txt  token.pickle
